Changed name bcs previous one was taken

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Simple weather app">
     <meta name="author" content="Ksawert_">
     <link rel="icon" type="img/png" href="icon/icon.svg">
-    <title>easyweather</title>
+    <title>effortlessweather</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,7 +19,7 @@
     
 <main>
     <header>
-        <h1>easyweather</h1>
+        <h1>effortlessweather</h1>
         <div class="btn-theme">
             <i class="fa-solid fa-moon" id="btnIcon"></i>
         </div>
